--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -74,9 +74,9 @@
             right: 0;
             bottom: 0;
             background-color: rgba(0, 0, 0, 0.5);
-            display: flex;
             align-items: center;
             justify-content: center;
+            display: none;
         }
         
         .modal.hidden {
